@@ -17,7 +17,8 @@ import javax.inject.Singleton;
 import com.gentics.madl.tx.Tx;
 import com.gentics.mesh.changelog.highlevel.AbstractHighLevelChange;
 import com.gentics.mesh.cli.BootstrapInitializer;
-import com.gentics.mesh.context.impl.DummyBulkActionContext;
+import com.gentics.mesh.context.NodeMigrationActionContext;
+import com.gentics.mesh.context.impl.NodeMigrationActionContextImpl;
 import com.gentics.mesh.core.data.GraphFieldContainerEdge;
 import com.gentics.mesh.core.data.NodeGraphFieldContainer;
 import com.gentics.mesh.core.data.Project;
@@ -73,6 +74,7 @@ public class FixNodeVersionOrder extends AbstractHighLevelChange {
 	public void apply() {
 		AtomicLong nodeCount = new AtomicLong();
 		AtomicLong fixedNodes = new AtomicLong();
+		NodeMigrationActionContextImpl context = new NodeMigrationActionContextImpl();
 		singleBranchProjects()
 			.flatMap(project -> project.getNodeRoot().findAll().stream())
 			.forEach(node -> {
@@ -82,7 +84,7 @@ public class FixNodeVersionOrder extends AbstractHighLevelChange {
 				}
 				node.getGraphFieldContainers(ContainerType.INITIAL).stream()
 					.forEach(content -> {
-						boolean mutated = fixNodeVersionOrder(node, content);
+						boolean mutated = fixNodeVersionOrder(context, node, content);
 						if (mutated) {
 							fixedNodes.incrementAndGet();
 						}
@@ -90,16 +92,16 @@ public class FixNodeVersionOrder extends AbstractHighLevelChange {
 				nodeCount.incrementAndGet();
 			});
 		log.info("Checked {} nodes. Found and fixed {} broken nodes", nodeCount.get(), fixedNodes.get());
+		context.getConflicts()
+			.forEach(conflict -> log.info("Encountered conflict for node {" + conflict.getNodeUuid() + "} which was automatically resolved."));
 	}
 
-	private boolean fixNodeVersionOrder(Node node, NodeGraphFieldContainer initialContent) {
+	private boolean fixNodeVersionOrder(NodeMigrationActionContext context, Node node, NodeGraphFieldContainer initialContent) {
 		Set<VersionNumber> seenVersions = new HashSet<>();
-		Set<Object> deletedVertexIds = new HashSet<>();
 		TreeSet<NodeGraphFieldContainer> versions = new TreeSet<>(Comparator.comparing(NodeGraphFieldContainer::getVersion));
 		NodeGraphFieldContainer highestVersion = null;
 		NodeGraphFieldContainer currentContainer = initialContent;
 		NodeGraphFieldContainer latestPublished = null;
-		DummyBulkActionContext bac = new DummyBulkActionContext();
 		boolean mutated = false;
 
 		String branchUuid = initialContent.getBranches(ContainerType.INITIAL).iterator().next();
@@ -112,76 +114,85 @@ public class FixNodeVersionOrder extends AbstractHighLevelChange {
 		Optional<Object> originalPublishedId = Optional.ofNullable(node.getGraphFieldContainer(languageTag, branchUuid, ContainerType.PUBLISHED))
 			.map(ElementFrame::id);
 
+		if (log.isDebugEnabled()) {
+			log.debug("Fixing node {}-{}", node.getUuid(), languageTag);
+		}
+
 		while (currentContainer != null) {
 			// Since we only look at single branch projects, there can at most only be one next version.
 			NodeGraphFieldContainer nextContainer = Iterables.getFirst(currentContainer.getNextVersions(), null);
 			VersionNumber currentVersion = currentContainer.getVersion();
 			boolean isDuplicate = !seenVersions.add(currentVersion);
 			if (isDuplicate) {
-				deletedVertexIds.add(currentContainer.id());
-				currentContainer.delete(bac, false);
-				if (nextContainer != null) {
-					// highestVersion can't be null because this if-branch is only visited if there is a duplicate
-					highestVersion.setSingleLinkOutTo(nextContainer, HAS_VERSION);
+				currentVersion = generateUniqueVersion(seenVersions, currentVersion);
+				currentContainer.setVersion(currentVersion);
+				seenVersions.add(currentVersion);
+				mutated = true;
+			}
+			if (highestVersion != null && currentVersion.compareTo(highestVersion.getVersion()) < 0) {
+				// This means that currentVersion is in the wrong order and needs to be moved.
+
+				NodeGraphFieldContainer lower = versions.lower(currentContainer);
+				// There must always be a higher version
+				NodeGraphFieldContainer higher = versions.higher(currentContainer);
+				higher.unlinkIn(null, HAS_VERSION);
+				currentContainer.unlinkIn(null, HAS_VERSION);
+				currentContainer.unlinkOut(null, HAS_VERSION);
+				currentContainer.setNextVersion(higher);
+				if (lower != null) {
+					lower.unlinkOut(null, HAS_VERSION);
+					lower.setNextVersion(currentContainer);
 				}
 				mutated = true;
-				currentContainer = nextContainer;
-			} else {
-				if (highestVersion != null && currentVersion.compareTo(highestVersion.getVersion()) < 0) {
-					// Wrong order
-
-					NodeGraphFieldContainer lower = versions.lower(currentContainer);
-					// There must always be a higher version
-					NodeGraphFieldContainer higher = versions.higher(currentContainer);
-					higher.unlinkIn(null, HAS_VERSION);
-					currentContainer.unlinkIn(null, HAS_VERSION);
-					currentContainer.unlinkOut(null, HAS_VERSION);
-					currentContainer.setNextVersion(higher);
-					if (lower != null) {
-						lower.unlinkOut(null, HAS_VERSION);
-						lower.setNextVersion(currentContainer);
-					}
-					mutated = true;
-				}
-				versions.add(currentContainer);
-				if (currentVersion.getMinor() == 0 && (latestPublished == null || latestPublished.getVersion().getMajor() < currentVersion.getMajor())) {
-					latestPublished = currentContainer;
-				}
-
-				highestVersion = versions.last();
-				currentContainer = nextContainer;
 			}
+			versions.add(currentContainer);
+			if (currentVersion.getMinor() == 0 && (latestPublished == null || latestPublished.getVersion().getMajor() < currentVersion.getMajor())) {
+				latestPublished = currentContainer;
+			}
+
+			highestVersion = versions.last();
+			currentContainer = nextContainer;
 		}
 
 		// Reset draft and published edge
 
 		if (originalDraftId.isPresent() && !originalDraftId.get().equals(highestVersion.id())) {
-			setNewOutV(node, highestVersion, branchUuid, languageTag, ContainerType.DRAFT);
-			// Deleting the edge would fail if it was already removed implicitly by removing one of the vertices
-			if (!deletedVertexIds.contains(originalDraftId.get())) {
-				originalDraftEdge.remove();
-			}
+			originalDraftEdge.remove();
+			setNewOutV(context, node, highestVersion, branchUuid, languageTag, ContainerType.DRAFT);
 			mutated = true;
 		}
 
 		if (originalPublishedId.isPresent() && latestPublished != null && !originalPublishedId.get().equals(latestPublished.id())) {
-			setNewOutV(node, latestPublished, branchUuid, languageTag, ContainerType.PUBLISHED);
-			// Deleting the edge would fail if it was already removed implicitly by removing one of the vertices
-			if (!deletedVertexIds.contains(originalPublishedId.get())) {
-				originalPublishedEdge.remove();
-			}
+			originalPublishedEdge.remove();
+			setNewOutV(context, node, latestPublished, branchUuid, languageTag, ContainerType.PUBLISHED);
 			mutated = true;
 		}
 		Tx.get().commit();
+		if (mutated && log.isDebugEnabled()) {
+			log.debug("The node was broken and has been fixed.");
+		}
 		return mutated;
 	}
 
-	private GraphFieldContainerEdge setNewOutV(Node from, NodeGraphFieldContainer to, String branchUuid, String languageTag, ContainerType type) {
+	/**
+	 * Increases the minor version until a unique version has been found.
+	 * @param seenVersions
+	 * @param version
+	 * @return
+	 */
+	private VersionNumber generateUniqueVersion(Set<VersionNumber> seenVersions, VersionNumber version) {
+		while (seenVersions.contains(version)) {
+			version = version.nextDraft();
+		}
+		return version;
+	}
+
+	private GraphFieldContainerEdge setNewOutV(NodeMigrationActionContext context, Node from, NodeGraphFieldContainer to, String branchUuid, String languageTag, ContainerType type) {
 		GraphFieldContainerEdge newEdge = from.addFramedEdge(HAS_FIELD_CONTAINER, to, GraphFieldContainerEdgeImpl.class);
 		newEdge.setBranchUuid(branchUuid);
 		newEdge.setLanguageTag(languageTag);
 		newEdge.setType(type);
-		to.updateWebrootPathInfo(branchUuid, "node_conflicting_segmentfield_update");
+		to.updateWebrootPathInfo(context, branchUuid, "node_conflicting_segmentfield_update");
 		return newEdge;
 	}
 
